Prepare for 1.0 release.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
     </issueManagement>
     <scm>
         <url>git@github.com:TouK/sonar-gerrit-plugin.git</url>
+        <connection>scm:git:https://github.com/TouK/sonar-gerrit-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:TouK/sonar-gerrit-plugin.git</developerConnection>
     </scm>
     <licenses>
         <license>
