--- a/pom.xml
+++ b/pom.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>pl.touk</groupId>
+	<groupId>fr.techad</groupId>
 	<artifactId>sonar-gerrit-plugin</artifactId>
 	<packaging>sonar-plugin</packaging>
-	<version>1.1-SNAPSHOT</version>
+	<version>2.0-rc1</version>
 
 	<name>Sonar Gerrit Plugin</name>
 	<description>Sonar will rate your gerrit patch set and comment on found alerts.</description>
-    <organization>
-        <name>TouK</name>
-        <url>http://touk.pl</url>
-    </organization>
-    <url>https://github.com/TouK/sonar-gerrit-plugin</url>
-    <issueManagement>
-        <system>github</system>
-        <url>https://github.com/TouK/sonar-gerrit-plugin/issues</url>
-    </issueManagement>
-    <scm>
-        <url>git@github.com:TouK/sonar-gerrit-plugin.git</url>
-        <connection>scm:git:https://github.com/TouK/sonar-gerrit-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:TouK/sonar-gerrit-plugin.git</developerConnection>
-    </scm>
-    <licenses>
-        <license>
-            <name>Apache License</name>
-        </license>
-    </licenses>
+	<organization>
+		<name>TECH'advantage</name>
+		<url>http://www.techad.fr</url>
+	</organization>
+	<url>https://github.com/tech-advantage/sonar-gerrit-plugin</url>
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/tech-advantage/sonar-gerrit-plugin/issues</url>
+	</issueManagement>
+	<scm>
+		<url>git@github.com:tech-advantage/sonar-gerrit-plugin.git</url>
+		<connection>scm:git:https://github.com/tech-advantage/sonar-gerrit-plugin.git</connection>
+		<developerConnection>scm:git:git@github.com:tech-advantage/sonar-gerrit-plugin.git</developerConnection>
+	</scm>
+	<licenses>
+		<license>
+			<name>Apache License</name>
+		</license>
+	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.buildVersion>4.0</sonar.buildVersion>
+		<sonar.buildVersion>4.3.2</sonar.buildVersion>
 		<jdk.min.version>1.6</jdk.min.version>
 	</properties>
 
@@ -43,54 +44,68 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.8</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.sonar</groupId>
 			<artifactId>sonar-testing-harness</artifactId>
 			<version>${sonar.buildVersion}</version>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3.1</version>
-        </dependency>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>2.3.0</version>
-        </dependency>
-        <dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
+			<version>1.10.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.9</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
 			<version>2.2.1</version>
 		</dependency>
-        <dependency>
-            <groupId>com.intellij</groupId>
-            <artifactId>annotations</artifactId>
-            <version>12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.9</version>
-        </dependency>
-
-
-    </dependencies>
+		<dependency>
+			<groupId>com.intellij</groupId>
+			<artifactId>annotations</artifactId>
+			<version>12.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.sonar</groupId>
 				<artifactId>sonar-packaging-maven-plugin</artifactId>
-				<version>1.1</version>
+				<version>1.12.1</version>
 				<extensions>true</extensions>
 				<configuration>
-					<pluginClass>pl.touk.sonar.GerritPlugin</pluginClass>
+					<pluginKey>gerrit</pluginKey>
+					<pluginName>Gerrit Reviewer</pluginName>
+					<pluginClass>fr.techad.sonar.GerritPlugin</pluginClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -103,7 +118,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- UTF-8 bundles are not supported by Java, so they must be converted
+				<!-- UTF-8 bundles are not supported by Java, so they must be converted 
 					during build -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>native2ascii-maven-plugin</artifactId>
