--- a/pom.xml
+++ b/pom.xml
@@ -145,4 +145,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>SonarSnapShot</id>
+			<name>Sonar Snapshot</name>
+			<url>http://repository-sonarplugins.forge.cloudbees.com/snapshot/</url>
+		</repository>
+	</repositories>
 </project>
