--- a/pom.xml
+++ b/pom.xml
@@ -153,4 +153,38 @@
 			<url>http://repository-sonarplugins.forge.cloudbees.com/snapshot/</url>
 		</repository>
 	</repositories>
+	
+	<reporting>
+  <plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-project-info-reports-plugin</artifactId>
+		<version>2.7</version>
+		<configuration>
+			<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+		</configuration>
+	</plugin>
+ 
+	<!-- Corbertura --> 
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>cobertura-maven-plugin</artifactId>
+		<version>2.6</version>
+		<configuration>
+			<formats>
+				<format>html</format>
+				<format>xml</format>
+			</formats>
+		</configuration>
+	</plugin>
+	
+	<!--  Surefire -->
+	 <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.18.1</version>
+      </plugin>
+ 
+   </plugins>
+</reporting>
 </project>
