correct warning about provided commons-logging

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.sonar</groupId>
 			<artifactId>sonar-testing-harness</artifactId>
 			<version>${sonar.buildVersion}</version>
