--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.4</version>
+    </dependency>
+    <dependency>
+        <groupId>fi.jpalomaki.ssh</groupId>
+        <artifactId>simple-ssh-client</artifactId>
+        <version>1.0.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.1</version>
@@ -83,11 +93,6 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.6.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
