--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>fr.techad</groupId>
 	<artifactId>sonar-gerrit-plugin</artifactId>
 	<packaging>sonar-plugin</packaging>
-	<version>2.2.1</version>
+	<version>2.3-SNAPSHOT</version>
 
 	<name>Sonar Gerrit Plugin</name>
 	<description>Sonar will rate your gerrit patch set and comment on found alerts.</description>
@@ -32,7 +32,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.buildVersion>4.5.1</sonar.buildVersion>
+		<sonar.buildVersion>4.5.6</sonar.buildVersion>
 		<jdk.min.version>1.7</jdk.min.version>
 	</properties>
 
@@ -79,9 +79,14 @@
 			<version>4.3.5</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.4.3</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>fi.jpalomaki.ssh</groupId>
+			<artifactId>simple-ssh-client</artifactId>
+			<version>1.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
