--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,21 @@
 language: java
+sudo: false
+install: true
+addons:
+  sonarcloud:
+    organization: "tech-advantage"
+    token:
+      secure: "RLkcMGMkbP8w9vExYbaaGLcXd2cdK82EsAywOHn2xPEBs7SE6KVcGsWUpb4Tgry3/usyriFUovQyu7BACnomRf2AinbzIu+LMChTe5Ridme9iQ2fUlqriSxXWUKH+SSGQddrumupud1ActcEIWqgSonkYsfozCkqHcG7G9zsVm0="
 jdk:
   - oraclejdk8
-sudo: false
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+
+
+
+
+
