--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <commons-codec.version>1.10</commons-codec.version>
         <fest-assert.version>1.4</fest-assert.version>
         <mockito.version>2.19.1</mockito.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>5.2.0</junit.version>
         <gson.version>2.8.5</gson.version>
         <simple-ssh-client>1.0.2</simple-ssh-client>
         <httpclient.version>4.5.6</httpclient.version>
@@ -69,12 +69,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.sonarsource.sonarqube</groupId>
-            <artifactId>sonar-testing-harness</artifactId>
-            <version>${sonar.buildVersion}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert</artifactId>
             <version>${fest-assert.version}</version>
@@ -87,8 +81,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>1.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
