--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,17 @@
 language: java
 sudo: false
 install: true
+jdk:
+  - oraclejdk8
 addons:
   sonarcloud:
     organization: "tech-advantage"
     token:
-      secure: "RLkcMGMkbP8w9vExYbaaGLcXd2cdK82EsAywOHn2xPEBs7SE6KVcGsWUpb4Tgry3/usyriFUovQyu7BACnomRf2AinbzIu+LMChTe5Ridme9iQ2fUlqriSxXWUKH+SSGQddrumupud1ActcEIWqgSonkYsfozCkqHcG7G9zsVm0="
-jdk:
-  - oraclejdk8
+      secure: "ToC1PTHu8r2wuqzGlkNOJ8LSyVbB4jGpcf7/9BceLhGFFjjqH6u0F+/gpUNrG1MroXf8vdm4G9dp3CKZ4b4FlCJ5nYDq/mO+m8xE6SGW8veNknf17iQqtTKhA6ruFqv2xDbREf1jFkZPOEGBc8+6qWjGf8/2piu/Ef6paQoO+r0="
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn -Dsonar.host.url=https://sonarcloud.io clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
-
-
-
-
 
